--- a/src/app/views/dashboard/searcher/searcher.component.html
+++ b/src/app/views/dashboard/searcher/searcher.component.html
@@ -1,5 +1,5 @@
-<mat-form-field appearance="fill" floatLabel="always"
+<mat-form-field appearance="outline"
   ><mat-icon matSuffix>search</mat-icon>
-  <mat-label>Buscar preguntas ...</mat-label>
+  <mat-label>Buscar preguntas</mat-label>
   <input matInput placeholder="¿Cómo comprar un equipo?" />
 </mat-form-field>
