--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/dashboard-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/dashboard-categories.component.html
@@ -6,43 +6,7 @@
       Nueva categoría
     </button>
   </div>
-  <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="position">
-      <th width="30%" mat-header-cell *matHeaderCellDef>Categoría</th>
-      <td mat-cell *matCellDef="let element" class="text-blue">{{ element.position }}</td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
-      <td mat-cell *matCellDef="let element">
-        <bdc-bo-scroll-categories [element]="element"></bdc-bo-scroll-categories>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="seeMore">
-      <th mat-header-cell width="40px" *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <div class="more-options">
-          <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item>
-              <span>Eliminar</span>
-            </button>
-            <button mat-menu-item>
-              <span>Editar</span>
-            </button>
-          </mat-menu>
-          <div class="menu" [ngClass]="{ open: element.isOpen }"></div>
-        </div>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <mat-paginator
-    [pageIndex]="pageIndex"
-    [pageSize]="pageSize"
-    [disabled]="disabled"
-    [hidePageSize]="true">
-  </mat-paginator>
+  <ng-container *ngIf="categories$ | async as categories">
+    <bdc-bo-tabla-categories [categories]="categories"></bdc-bo-tabla-categories>
+  </ng-container>
 </div>
