--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -2,7 +2,7 @@
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="question">
       <th mat-header-cell *matHeaderCellDef>Pregunta</th>
-      <td mat-cell *matCellDef="let element" class="text-blue">{{ element.question }}</td>
+      <td mat-cell *matCellDef="let element" class="text-blue">{{ element.name }}</td>
     </ng-container>
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef>Categorías</th>
@@ -19,9 +19,9 @@
     <ng-container matColumnDef="lastupdate">
       <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.due_at | date: 'd MMM, y, h:mm' }} <br />
+        {{ element.updated_at | date: 'd MMM, y, h:mm' }} <br />
         hasta
-        {{ element.publish_at | date: 'd MMM, y, h:mm' }}
+        {{ element.published_at | date: 'd MMM, y, h:mm' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="state">
