--- a/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.html
@@ -7,11 +7,11 @@
       <mat-label>Nombre</mat-label>
       <input
         matInput
-        formControlName="username"
+        formControlName="name"
         name="name"
         type="text"
         placeholder="attenbase@attenbase.com" />
-      <mat-error *ngIf="form.controls['username']"
+      <mat-error *ngIf="form.controls['name']"
         >Ingrese un nombre de al menos dos letras.
       </mat-error>
     </mat-form-field>
