--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.scss
@@ -16,26 +16,31 @@ th {
 td {
   font-size: 12px;
   color: #999999;
-  // max-width: 180px;
 
   &::first-letter {
     text-transform: capitalize;
   }
 }
-td div {
-  display: flex;
-  width: max-content;
-  max-width: 180px;
-  overflow-x: scroll;
+td {
+  div {
+    display: flex;
+    width: max-content;
+    max-width: 180px;
+    overflow-x: scroll;
+  }
 }
-td div::-webkit-scrollbar {
-  display: none;
+td {
+  div::-webkit-scrollbar {
+    display: none;
+  }
 }
-th button {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  transform: translateY(5px);
+th {
+  button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    transform: translateY(5px);
+  }
 }
 
 mat-chip {
