--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -18,13 +18,12 @@
 
   main {
     margin-left: 74px;
-    padding-right: 168px;
+    padding-right: 11.6vw;
     grid-area: main;
     overflow: auto;
 
-    @media (min-width:1020px) {
-      padding-right: 168px;
-      
+    @media (min-width: 1020px) {
+      padding-right: 11.6vw;
     }
   }
 }
