--- a/src/assets/sass/utilities.scss
+++ b/src/assets/sass/utilities.scss
@@ -2,6 +2,9 @@
 .mr-10 {
   margin-right: 10px !important;
 }
+.ml-8 {
+  margin-left: 8px !important;
+}
 
 .mt-20 {
   margin-top: 20px !important;
@@ -19,4 +22,14 @@
 
 .f-14 {
   font-size: 14px !important;
+}
+
+// WIDTH
+.max-w-500 {
+  max-width: 500px;
+}
+
+// mat menu
+.mat-mdc-menu-panel.mat-mdc-menu-panel {
+  max-width: 100% !important;
 }
