--- a/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.scss
@@ -1,6 +1,5 @@
 .form-inputs {
-  max-width: 20vw;
-  min-width: 10vw;
+  max-width: 280px;
   width: 100%;
   margin-right: 20px;
   margin-bottom: 25px;
