--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
@@ -17,7 +17,13 @@
       </button>
     </div>
   </div>
-  <table mat-table [dataSource]="dataSource" matSort>
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+    matSortActive="userName"
+    matSortDirection="asc"
+    matSortDisableClear>
     <ng-container matColumnDef="userName">
       <th width="30%" mat-header-cell *matHeaderCellDef mat-sort-header>
         <span>Nombre y apellido</span>
