new synonym mock up

--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="action">
     <h1>Sinónimos de Negocio</h1>
-    <button mat-flat-button color="primary">
+    <button mat-flat-button color="primary" [routerLink]="['/dashboard/sinonimos/crear-sinonimo']">
       <mat-icon>add</mat-icon>
       Crear nuevo
     </button>
