--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <h2>Editar Sinónimo de Negocio</h2>
+  <h2>Nuevo Sinónimo de Negocio</h2>
   <form [formGroup]="form" class="edit-synonyms-form">
     <mat-form-field appearance="outline" class="max-w-500" hideRequiredMarker>
       <mat-label>Origen</mat-label>
@@ -42,7 +42,7 @@
         color="primary"
         (click)="sendSynonymEdition()"
         [disabled]="form.invalid">
-        Guardar cambios
+        Crear sinónimo
       </button>
     </div>
   </form>
