--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
@@ -10,10 +10,15 @@
     <mat-form-field
       class="synonyms-input-area"
       appearance="outline"
+      formControlName="synonymList"
       hideRequiredMarker
       aria-required>
       <mat-label>Listado de Sinonimos</mat-label>
-      <mat-chip-grid #chipGrid aria-label="Enter synonyms">
+      <mat-chip-grid
+        #chipGrid
+        aria-label="Enter synonyms"
+        class="synonyms-input-area"
+        formControlName="synonymList">
         <mat-chip-row
           *ngFor="let synonym of synonyms"
           (removed)="remove(synonym)"
