--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
@@ -66,7 +66,7 @@
           <div>
             <ng-container *ngFor="let item of element.userClients">
               <mat-chip>
-                <span class="font-cap f-14">{{ item }}</span>
+                <span>{{ item }}</span>
                 <!-- <button matChipRemove aria-label="eliminar usuario" (click)="deleteItem()">
                   <mat-icon>close</mat-icon>
                 </button> -->
