--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   margin-left: 40px;
 }
+.origen-form-field {
+  max-width: 500px;
+}
 .synonyms-input-area {
   width: 100%;
 }
@@ -18,6 +21,9 @@ mat-form-field {
 mat-hint {
   font-size: 12px;
   color: #73777f;
+}
+mat-error {
+  font-size: 12px;
 }
 .forms-buttons {
   display: flex;
