--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -18,7 +18,7 @@
 
   main {
     margin-left: 74px;
-    padding-right: 11.6vw;
+    padding-right: 150px;
     grid-area: main;
     overflow: auto;
 
