--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
@@ -1,39 +1,50 @@
-<table mat-table [dataSource]="dataSource">
-  <ng-container matColumnDef="position">
-    <th width="30%" mat-header-cell *matHeaderCellDef>Categoría</th>
-    <td mat-cell *matCellDef="let element" class="text-blue">{{ element.name }}</td>
-  </ng-container>
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
-    <td mat-cell *matCellDef="let element">
-      <bdc-bo-scroll-categories [element]="element.children"></bdc-bo-scroll-categories>
-    </td>
-  </ng-container>
-  <ng-container matColumnDef="seeMore">
-    <th mat-header-cell width="40px" *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <div class="more-options">
-        <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>
-            <span (click)="deleteCategory(element.id)">Eliminar</span>
-          </button>
-          <button mat-menu-item>
-            <span>Editar</span>
-          </button>
-        </mat-menu>
-      </div>
-    </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
-<mat-paginator
-  [length]="categories.length"
-  [pageIndex]="0"
-  [pageSize]="10"
-  [disabled]="false"
-  [hidePageSize]="true">
-</mat-paginator>
+<div *ngIf="categories > 0; else noCategories">
+  <div class="wrapper">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="position">
+        <th width="30%" mat-header-cell *matHeaderCellDef>Categoría</th>
+        <td mat-cell *matCellDef="let element" class="text-blue">{{ element.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
+        <td mat-cell *matCellDef="let element">
+          <bdc-bo-scroll-categories [element]="element.children"></bdc-bo-scroll-categories>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="seeMore">
+        <th mat-header-cell width="40px" *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <div class="more-options">
+            <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="deleteCategory(element.id, element.name)">
+                <span>Eliminar</span>
+              </button>
+              <button mat-menu-item (click)="detailCategory(element.id)">
+                <span>Editar</span>
+              </button>
+            </mat-menu>
+          </div>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <mat-paginator
+      [length]="categories.length"
+      [pageIndex]="0"
+      [pageSize]="10"
+      [disabled]="false"
+      [hidePageSize]="true">
+    </mat-paginator>
+    <div class="overlay" *ngIf="areCategoriesLoading$ | async">
+      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'"> </mat-progress-spinner>
+    </div>
+  </div>
+</div>
+
+<ng-template #noCategories>
+  <p>No hay categorias</p>
+</ng-template>
