--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.scss
@@ -1,24 +1,24 @@
-table {
-    td {
-        color: #999999;
-        mat-icon {
-            color: #344b64;
-        }
-        &.text-blue {
-            color: #0062a1;
-            font-size: 16px;
+.wrapper {
+    position: relative;
+    table {
+        td {
+            color: #999999;
+            mat-icon {
+                color: #344b64;
+            }
+            &.text-blue {
+                color: #0062a1;
+                font-size: 16px;
+            }
         }
     }
-}
-.overlay {
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(255, 255, 255, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    left: 0;
+    .overlay {
+        width: 100%;
+        height: auto;
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
