--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/dashboard-synonyms.component.html
@@ -14,12 +14,11 @@
     <table mat-table [dataSource]="synonyms.data">
       <ng-container matColumnDef="position">
         <th width="30%" mat-header-cell *matHeaderCellDef>Origen</th>
-        <td mat-cell *matCellDef="let element" class="text-blue">{{ element.word }}</td>
+        <td mat-cell *matCellDef="let element" class="text-blue">{{ element.synonym }}</td>
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Sinónimo(s)</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.synonyms }}
           <bdc-bo-scroll-synonyms [element]="element.synonyms"></bdc-bo-scroll-synonyms>
         </td>
       </ng-container>
