--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -3,8 +3,8 @@
   grid-template-columns: min-content minmax(768px, 100%);
   grid-template-rows: 80px calc(100vh - 80px);
   grid-template-areas:
-    'aside header'
-    'aside main';
+    "aside header"
+    "aside main";
 
   aside {
     grid-area: aside;
@@ -18,13 +18,12 @@
 
   main {
     margin-left: 74px;
-    padding-right: 168px;
+    padding-right: 10.83%;
     grid-area: main;
     overflow: auto;
 
-    @media (min-width:1020px) {
+    @media (min-width: 1020px) {
       padding-right: 168px;
-      
     }
   }
 }
