--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.scss
@@ -1,69 +1,71 @@
-.action {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.username {
-  text-transform: capitalize;
-  color: #0062a1;
-}
-th {
-  width: max-content;
-  min-width: min-content;
-  font-size: 14px;
-  font-weight: 500;
-}
-td {
-  font-size: 12px;
-  color: #999999;
-
-  &::first-letter {
-    text-transform: capitalize;
-  }
-}
-td {
-  div {
+.wrapper {
+  .action {
     display: flex;
-    width: max-content;
-    max-width: 180px;
-    overflow-x: scroll;
+    justify-content: space-between;
+    align-items: center;
   }
-}
-td {
-  div::-webkit-scrollbar {
-    display: none;
-  }
-}
-th {
-  button {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    transform: translateY(5px);
-  }
-}
-
-mat-chip {
-  background-color: white !important;
-  border: 1px solid #a7abb3;
-  margin-right: 5px;
-  span {
-    color: #73777f;
-    font-size: 14px;
+  .username {
     text-transform: capitalize;
+    color: #0062a1;
+  }
+  th {
+    width: max-content;
+    min-width: min-content;
+    font-size: 14px;
+    font-weight: 500;
+  }
+  td {
+    font-size: 12px;
+    color: #999999;
+
+    &::first-letter {
+      text-transform: capitalize;
+    }
+  }
+  td {
+    div {
+      display: flex;
+      width: max-content;
+      max-width: 180px;
+      overflow-x: scroll;
+    }
+  }
+  td {
+    div::-webkit-scrollbar {
+      display: none;
+    }
+  }
+  th {
+    button {
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+      transform: translateY(5px);
+    }
   }
 
-  & button {
-    opacity: 0;
-  }
-  &:hover {
-    color: #73777f;
-    background-color: #dfe3eb;
-    button {
-      opacity: 1;
-    }
-    mat-icon {
+  mat-chip {
+    background-color: white !important;
+    border: 1px solid #a7abb3;
+    margin-right: 5px;
+    span {
       color: #73777f;
+      font-size: 14px;
+      text-transform: capitalize;
+    }
+
+    & button {
+      opacity: 0;
+    }
+    &:hover {
+      color: #73777f;
+      background-color: #dfe3eb;
+      button {
+        opacity: 1;
+      }
+      mat-icon {
+        color: #73777f;
+      }
     }
   }
 }
