--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/edit-synonyms/edit-synonyms.component.html
@@ -40,7 +40,7 @@
       <mat-error *ngIf="form.controls['synonymList'].errors"
         >Se requiere al menos un sinonimo</mat-error
       >
-      <mat-hint>Los sinonimos que elijas separalos en chips con un 'enter'.</mat-hint>
+      <mat-hint>Ingresá una palabra o frase, seguido de tecla ENTER.</mat-hint>
     </mat-form-field>
 
     <div class="forms-buttons">
