--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
@@ -39,7 +39,7 @@
       <mat-error *ngIf="form.controls['synonymList'].errors"
         >Se requiere al menos un sinonimo</mat-error
       >
-      <mat-hint>Cada palabra o grupo de palabras debe estar separado con comas.</mat-hint>
+      <mat-hint>Ingresá una palabra o frase, seguido de tecla ENTER.</mat-hint>
     </mat-form-field>
 
     <div class="forms-buttons">
