--- a/src/app/views/dashboard/aside/nav/nav.component.html
+++ b/src/app/views/dashboard/aside/nav/nav.component.html
@@ -1,14 +1,19 @@
 <nav [ngClass]="{ 'menu-open': isOpen }">
-  <div *ngFor="let item of pages">
-    <div class="item" routerLinkActive="active" [routerLink]="['/dashboard/' + item.relativePath]">
-      <div class="bg-icon">
-        <mat-icon [svgIcon]="item.icon"></mat-icon>
-        <div class="item-data" *ngIf="isOpen">
-          <p>{{ item.label }}</p>
-          <p *ngIf="item.data">{{ item.data }}</p>
+  <ng-container *ngIf="combinedPages$ | async as pages">
+    <div *ngFor="let item of pages">
+      <div
+        class="item"
+        routerLinkActive="active"
+        [routerLink]="['/dashboard/' + item.relativePath]">
+        <div class="bg-icon">
+          <mat-icon [svgIcon]="item.icon"></mat-icon>
+          <div class="item-data" *ngIf="isOpen">
+            <p>{{ item.label }}</p>
+            <p *ngIf="item.data">{{ item.data }}</p>
+          </div>
         </div>
+        <p *ngIf="!isOpen">{{ item.label }}</p>
       </div>
-      <p *ngIf="!isOpen">{{ item.label }}</p>
     </div>
-  </div>
+  </ng-container>
 </nav>
