--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/scroll-categories/scroll-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/scroll-categories/scroll-categories.component.html
@@ -7,7 +7,7 @@
       <mat-chip-listbox>
         <ng-container *ngFor="let item of items">
           <mat-chip>
-            <span>{{ item.elementos }}</span>
+            <span>{{ item.name }}</span>
             <button
               matChipRemove
               aria-label="eliminar sinonimo"
