--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="categories > 0; else noCategories">
+<div *ngIf="categories; else noCategories">
   <div class="wrapper">
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="position">
@@ -8,7 +8,9 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Subcategorías</th>
         <td mat-cell *matCellDef="let element">
-          <bdc-bo-scroll-categories [element]="element.children"></bdc-bo-scroll-categories>
+          <bdc-bo-scroll-categories
+            *ngIf="element.subcategories"
+            [element]="element.subcategories"></bdc-bo-scroll-categories>
         </td>
       </ng-container>
       <ng-container matColumnDef="seeMore">
@@ -32,6 +34,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+    <p>{{ categories.total }}</p>
     <mat-paginator
       [length]="categories.length"
       [pageIndex]="0"
