--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -27,7 +27,7 @@
     <ng-container matColumnDef="state">
       <th mat-header-cell *matHeaderCellDef>Estado</th>
       <td mat-cell *matCellDef="let element">
-        <bdc-bo-status-question [class]="element.status.class" [name]="element.status.name">
+        <bdc-bo-status-question [class]="element.status.code" [name]="element.status.name">
         </bdc-bo-status-question></td
     ></ng-container>
 
