--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
@@ -1,5 +1,4 @@
 <ng-container *ngIf="categoryId$ | async as category">
-  <p>hola</p>
   <div class="wrapper">
     <div class="header">
       <h1>{{ category.name }}</h1>
@@ -13,21 +12,27 @@
         </button>
       </div>
     </div>
+
+    <h2>Subcategorías</h2>
+    <mat-accordion>
+      <mat-expansion-panel
+        *ngFor="let item of category.subcategories"
+        (opened)="panelOpenState = true"
+        (closed)="panelOpenState = false">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <div class="show-questions">1</div>
+            {{ item.name }}
+          </mat-panel-title>
+          <mat-panel-description> </mat-panel-description>
+        </mat-expansion-panel-header>
+        <p>preguntas asociadas</p>
+      </mat-expansion-panel>
+    </mat-accordion>
+
+    <ng-container *ngIf="areCategoriesLoading$ | async" class="overlay">
+      <mat-progress-spinner [color]="'primary'" [mode]="'indeterminate'" [value]="50">
+      </mat-progress-spinner>
+    </ng-container>
   </div>
-  <h2>Subcategorías</h2>
-  <mat-accordion>
-    <mat-expansion-panel
-      *ngFor="let item of category.children"
-      (opened)="panelOpenState = true"
-      (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          <div class="show-questions">1</div>
-          {{ item.name }}
-        </mat-panel-title>
-        <mat-panel-description> </mat-panel-description>
-      </mat-expansion-panel-header>
-      <p>preguntas asociadas</p>
-    </mat-expansion-panel>
-  </mat-accordion>
 </ng-container>
