--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/table/table-categories.component.scss
@@ -13,12 +13,15 @@
         }
     }
     .overlay {
+        z-index: 1;
         width: 100%;
-        height: auto;
+        height: 100%;
         position: absolute;
         background-color: rgba(255, 255, 255, 0.8);
         display: flex;
         justify-content: center;
         align-items: center;
+        top: 0;
+        left: 0;
     }
 }
