componetizacion e integracion de listado de usuarios

--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -24,7 +24,7 @@
           color="primary"
           [routerLink]="['/dashboard/listado-de-preguntas/crear-pregunta']">
           <mat-icon>add</mat-icon>
-          Crear nueva pregunta
+          Crear pregunta
         </button>
       </div>
     </div>
