--- a/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/dashboard-users.component.html
@@ -17,102 +17,7 @@
       </button>
     </div>
   </div>
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    matSort
-    matSortActive="userName"
-    matSortDirection="asc"
-    matSortDisableClear>
-    <ng-container matColumnDef="userName">
-      <th width="30%" mat-header-cell *matHeaderCellDef mat-sort-header>
-        <span>Nombre y apellido</span>
-        <!-- <button>
-          <mat-icon>unfold_more</mat-icon>
-        </button> -->
-      </th>
-      <td class="username" mat-cell *matCellDef="let element" class="username">
-        {{ element.userName }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="userEmail">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.userEmail }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="lastLogin">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Último login
-        <!-- <button>
-          <mat-icon>unfold_more</mat-icon>
-        </button> -->
-      </th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.lastLogin }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="userClients">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Clientes habilitados
-        <!-- <button>
-          <mat-icon>unfold_more</mat-icon>
-        </button> -->
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <!-- <bdc-bo-allowed-clients [element]="element"></bdc-bo-allowed-clients> -->
-        <!-- {{ element.userClients }} -->
-        <div>
-          <div>
-            <ng-container *ngFor="let item of element.userClients">
-              <mat-chip>
-                <span>{{ item }}</span>
-                <!-- <button matChipRemove aria-label="eliminar usuario" (click)="deleteItem()">
-                  <mat-icon>close</mat-icon>
-                </button> -->
-              </mat-chip>
-            </ng-container>
-          </div>
-        </div>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="userRol">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Rol
-        <!-- <button>
-          <mat-icon>unfold_more</mat-icon>
-        </button> -->
-      </th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.userRol }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="seeMore">
-      <th mat-header-cell width="40px" *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <div class="more-options">
-          <button [matMenuTriggerFor]="menu" mat-icon-button aria-label="más opciones">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item>
-              <span>Eliminar</span>
-            </button>
-            <button mat-menu-item>
-              <span>Editar</span>
-            </button>
-          </mat-menu>
-          <div class="menu" [ngClass]="{ open: element.isOpen }"></div>
-        </div>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <mat-paginator
-    [pageIndex]="pageIndex"
-    [pageSize]="pageSize"
-    [disabled]="disabled"
-    [hidePageSize]="true">
-  </mat-paginator>
+  <ng-container *ngIf="users$ | async as users">
+    <bdc-bo-tabla-users [users]="users"></bdc-bo-tabla-users>
+  </ng-container>
 </div>
