--- a/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/dashboard-question.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="question-action">
       <h1>Preguntas</h1>
-      <nav mat-tab-nav-bar [tabPanel]="tabPanel">
+      <nav mat-tab-nav-bar [tabPanel]="tabPanel" [color]="'accent'">
         <a
           mat-tab-link
           *ngFor="let tab of tabs"
