--- a/src/app/views/dashboard/aside/aside.component.scss
+++ b/src/app/views/dashboard/aside/aside.component.scss
@@ -16,6 +16,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    .align-center {
+      display: flex;
+      align-items: center;
+    }
     .menu {
       margin-bottom: 16px;
     }
