--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.html
@@ -19,9 +19,9 @@
     <ng-container matColumnDef="lastupdate">
       <th mat-header-cell *matHeaderCellDef>Fecha de publicación</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.updated_at | date: 'd MMM, y, h:mm' }} <br />
+        {{ element.updated_at | date: 'MM/dd/yy h:mm' }} <br />
         hasta
-        {{ element.published_at | date: 'd MMM, y, h:mm' }}
+        {{ element.published_at | date: 'MM/dd/yy h:mm' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="state">
