--- a/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/table/table-question.component.scss
@@ -1,14 +1,18 @@
 .wrapper {
   position: relative;
   table {
+    th{
+      font-size: 14px;
+    }
     td {
+      font-size: 14px;
       color: #999999;
       mat-icon {
         color: #344b64;
       }
       &.text-blue {
         color: #0062a1;
-        font-size: 16px;
+        font-size: 12px;
       }
     }
   }
