--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/new-synonym/new-synonym.component.html
@@ -1,5 +1,8 @@
 <div class="wrapper">
-  <h2>Nuevo Sinónimo de Negocio</h2>
+  <div class="action">
+    <bdc-bo-back-arrow-button></bdc-bo-back-arrow-button>
+    <h2>Nuevo Sinónimo de Negocio</h2>
+  </div>
   <form [formGroup]="form" class="edit-synonyms-form">
     <mat-form-field class="origen-form-field" appearance="outline" hideRequiredMarker>
       <mat-label>Origen</mat-label>
