--- a/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/create-user/create-user.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
   <div class="action">
+    <bdc-bo-back-arrow-button></bdc-bo-back-arrow-button>
     <h1>Crear Usuario</h1>
   </div>
   <form [formGroup]="form" class="form">
