redirect to listado de preguntas

--- a/src/app/shared/back-arrow-button/back-arrow-button.component.html
+++ b/src/app/shared/back-arrow-button/back-arrow-button.component.html
@@ -1,3 +1,3 @@
-<button (click)="back()">
+<button [routerLink]="['redirect-listado-de-preguntas']">
   <mat-icon>arrow_back_ios_outlined</mat-icon>
 </button>
